<resources>
  <string name="accessories">ACCESSORIES</string>
  <string name="add_accessory">ADD ACCESSORY</string>
  <string name="add_accessory_message">Add Accessory</string>
  <string name="app_name">東京東筑会
年会費支払</string>
  <string name="bike">BIKE</string>
  <string name="bike_image">Image of Customizable Bike</string>
  <string name="cancel">キャンセル</string>
  <string name="checkout">CHECKOUT</string>
  <string name="customize_new_bike">CUSTOMIZE NEW BIKE</string>
  <string name="error_api_disabled">Point of Sale API is Disabled</string>
  <string name="error_api_disabled_message">Sorry, the Point of Sale API is not currently available.</string>
  <string name="error_invalid_request_message">The debug description of this error can be found in Logcat.</string>
  <string name="error_install_point_of_sale">Install Point of Sale</string>
  <string name="error_install_point_of_sale_message">Square Point of Sale must be installed to perform transactions. Please visit the play store to download.</string>
  <string name="error_network">Network error</string>
  <string name="error_network_message">The transaction failed because there is no Internet connection. Please ensure you are connected and try again.</string>
  <string name="error_no_result">No result from Square Point of Sale</string>
  <string name="error_no_result_message">This can happen if Square Point of Sale was uninstalled or crashed while we\'re waiting for a result.</string>
  <string name="error_not_activated">User not activated</string>
  <string name="error_not_activated_message">This Square merchant has not been activated for card processing. You can complete the transaction with cash or sign in to Point of Sale with a different account.</string>
  <string name="error_not_authorized">The Merchant has not authorized this application</string>
  <string name="error_not_logged_in">User not logged in</string>
  <string name="error_not_logged_in_message">You must be logged in to Square Point of Sale on this device to complete the transaction. Please log in and try again.</string>
  <string name="error_transaction_cancelled">The Transaction was Cancelled</string>
  <string name="error_transaction_cancelled_message">Click try again to restart the transaction or return to your bike and continue customizing.</string>
  <string name="error_transaction_in_progress">Transaction in Progress</string>
  <string name="error_transaction_in_progress_message">Please open Point of Sale and complete the transaction in progress before trying again.</string>
  <string name="error_unspecified">Point of Sale API Encountered an Error</string>
  <string name="install_point_of_sale_confirm">Open Play Store</string>
  <string name="item_option_message">Choose Your %1$s</string>
  <string name="learn_more">Learn More</string>
  <string name="loading">Loading Items…</string>
  <string name="logo">Owen\'s Bikes Logo</string>
  <string name="ok">OK</string>
  <string name="open_point_of_sale">Open Point of Sale</string>
  <string name="order_complete">ORDER COMPLETE</string>
  <string name="order_info">Order No. %1$s has been sent to the warehouse for production.</string>
  <string name="plus">+</string>
  <string name="remove">Remove</string>
  <string name="remove_accessory">Remove this Accessory?</string>
  <string name="retry">Retry</string>
  <string name="total">TOTAL: </string>
  <string name="try_again">Please try again</string>
  <string name="update_point_of_sale_title">Update Point of Sale</string>
  <string name="update_point_of_sale_message">The installed version of Square Point of Sale doesn\'t support this version of the Point of Sale SDK. Please update the Point of Sale application.</string>

  <string name="annual_fee_payment">年会費支払:タッチ決済</string>
  <string name="reader_connected">🔵 Reader接続中</string>
  <string name="reader_disconnected">🔴 Reader未接続</string>
  <string name="graduation_term">卒業期</string>
  <string name="full_name">氏名</string>
  <string name="name_hint">氏名を入力してください</string>
  <string name="amount">金額</string>
  <string name="amount_social">3,000円（社会人）</string>
  <string name="amount_student">1,000円（学生）</string>
  <string name="amount_development">1円（開発）</string>
  <string name="start_payment">決済を開始する</string>
  <string name="label_social">社会人</string>
  <string name="label_student">学生</string>
  <string name="label_development">開発</string>
  <string name="confirm_title">以下の内容で決済します</string>
  <string name="confirm_message_template">卒業期: %1$s\n氏名: %2$s\n金額: %3$s\n区分: %4$s</string>
  <string name="payment_note_template">年会費決済\n卒業期: %1$s\n氏名: %2$s\n区分: %3$s\n金額: %4$d円</string>
  <string name="yen_amount_format">¥%,d</string>
  <string name="dev_bypass_title">開発用: 決済結果を選択</string>
  <string name="dev_bypass_message">Squareを呼び出さずに、表示確認用の結果を選択できます。</string>
  <string name="dev_bypass_success">成功を表示</string>
  <string name="dev_bypass_failure">失敗を表示</string>
  <string name="dev_bypass_badge">DEV BYPASS ON</string>
  <string name="success_title">決済が完了しました</string>
  <string name="success_message_template">卒業期: %1$s\n氏名: %2$s\n金額: %3$s</string>
</resources>
